= Version History =
x.x:

- fixed: wrong container_guid in some cases
- fixed: last pages revision is correctly updated now

1.0 (2012-08-07):

- first release